added button arrow html

--- a/accordionForms/accessibleFormIndex.html
+++ b/accordionForms/accessibleFormIndex.html
@@ -21,7 +21,7 @@
             <button class="toggle-btn">
               <span class="btn-content"
                 >Personal Information
-                <!-- add span with class of accordion-icon -->
+                <span class="accordion-icon"></span>
               </span>
             </button>
           </h3>
@@ -52,8 +52,7 @@
             <button class="toggle-btn">
               <span class="btn-content"
                 >Billing Address
-
-                <!-- add span with class of accordion-icon -->
+                <span class="accordion-icon"></span>
               </span>
             </button>
           </h3>
@@ -84,7 +83,7 @@
             <button class="toggle-btn">
               <span class="btn-content"
                 >Shipping Address
-                <!-- add span with class of accordion-icon -->
+                <span class="accordion-icon"></span>
               </span>
             </button>
           </h3>
