getting there markup

--- a/accordionForms/accessibleFormIndex.html
+++ b/accordionForms/accessibleFormIndex.html
@@ -16,7 +16,7 @@
       <h2 class="visually-hidden">Accordion</h2>
       <div class="wrapper">
         <article class="personal-information">
-          <h3 class="toggle-heading">
+          <h3 aria-expanded="true" class="toggle-heading">
             <!-- add span element our button title  -->
             <button class="toggle-btn">
               <span class="btn-content"
@@ -48,7 +48,7 @@
           </div>
         </article>
         <article class="billing-address">
-          <h3 class="toggle-heading">
+          <h3 aria-expanded="false" class="toggle-heading">
             <button class="toggle-btn">
               <span class="btn-content"
                 >Billing Address
@@ -79,7 +79,7 @@
           </div>
         </article>
         <article class="shipping-address">
-          <h3 class="toggle-heading">
+          <h3 aria-expanded="false" class="toggle-heading">
             <button class="toggle-btn">
               <span class="btn-content"
                 >Shipping Address
